--- a/.env
+++ b/.env
@@ -1,15 +1,31 @@
-#
-# MULTI_USER: Multi-user status
-#
-# ENVIRONMENT
-#  - development: Enables Error Report and Debugging
-#  - release: Disables Error Reporting for Performance
-#  - web: For Live
-#
-# See more on App class
-#
+PHP_VERSION=8.0
+
+REMOTE_USER=vscode
+USER_UID=1000
+USER_GID=1000
+
+XDEBUG_REMOTE_ENABLE=1
+XDEBUG_REMOTE_AUTOSTART=1
+XDEBUG_REMOTE_CONNECT_BACK=0
+XDEBUG_REMOTE_HOST=localhost
+XDEBUG_REMOTE_PORT=9001
+XDEBUG_REMOTE_LOG=
+
+MYSQL_ROOT_PASSWORD=docker
+MYSQL_USER=docker
+MYSQL_PASSWORD=docker
+MYSQL_DATABASE=docker
+
+POSTGRESQL_USERNAME=postgres
+POSTGRESQL_PASSWORD=docker
+POSTGRESQL_DATABASE=docker
+
+MONGO_INITDB_ROOT_USERNAME=root
+MONGO_INITDB_ROOT_PASSWORD=docker
+
+ME_CONFIG_MONGODB_ADMINUSERNAME=root
+ME_CONFIG_MONGODB_ADMINPASSWORD=docker
+
 MULTI_USER=false
 ENVIRONMENT=release
-#
-# Just for fun
 WOWOWIN="HEP HEP HOORAY!"
