--- a/.env
+++ b/.env
@@ -27,5 +27,5 @@ ME_CONFIG_MONGODB_ADMINUSERNAME=root
 ME_CONFIG_MONGODB_ADMINPASSWORD=docker
 
 MULTI_USER=false
-ENVIRONMENT=release
+ENVIRONMENT=development
 WOWOWIN="HEP HEP HOORAY!"
