--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,3 @@
-#
-# MULTI_USER: Multi-user status
-#
-# ENVIRONMENT
-#  - development: Enables Error Report and Debugging
-#  - release: Disables Error Reporting for Performance
-#  - web: For Live
-#
-# See more on App class
-#
-MULTI_USER=false
-ENVIRONMENT=release
-#
-# Just for fun
-WOWOWIN="HEP HEP HOORAY!"
-
-# Dev Container
-#
 PHP_VERSION=8.0
 
 REMOTE_USER=vscode
@@ -43,3 +25,7 @@ MONGO_INITDB_ROOT_PASSWORD=docker
 
 ME_CONFIG_MONGODB_ADMINUSERNAME=root
 ME_CONFIG_MONGODB_ADMINPASSWORD=docker
+
+MULTI_USER=false
+ENVIRONMENT=development
+WOWOWIN="HEP HEP HOORAY!"
