--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "jenssegers/agent": "^2.5",
         "robmorgan/phinx": "^0.12.4",
         "squizlabs/php_codesniffer": "*",
-        "vlucas/phpdotenv": "^5.2"
+        "vlucas/phpdotenv": "^5.2",
+        "perchten/neat_html": "^1.4"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "3.*",
