--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,18 +22,20 @@
 	},
 
 	// Add the IDs of extensions you want installed when the container is created.
+	// TODO: Error
+	//   Following extensions should be disabled since their features overlaps with PHP Tools: PHP Intelephense (bmewburn.vscode-intelephense-client),
+	//   phpfmt - PHP formatter (kokororin.vscode-phpfmt), PHP Symbols (linyang95.php-symbols), PHP import checker (marabesi.php-import-checker),
+	//   PHP Namespace Resolver (MehediDracula.php-namespace-resolver), PHP DocBlocker (neilbrayfield.php-docblocker)
 	"extensions": [
-		"xdebug.php-pack",
-		"walkme.PHP-extension-pack",
-		"phproberto.vscode-php-getters-setters",
-		"linyang95.php-symbols",
+		// "walkme.PHP-extension-pack",
+		// "phproberto.vscode-php-getters-setters",
+		// "linyang95.php-symbols",
 		"mrmlnc.vscode-apache",
 		"mtxr.sqltools",
 		"mtxr.sqltools-driver-mysql",
-		"esbenp.prettier-vscode",
-		"mrmlnc.vscode-apache",
 		"faelv.composer-companion",
-		"marabesi.php-import-checker"
+		"marabesi.php-import-checker",
+		"DEVSENSE.phptools-vscode"
 	],
 
 	// For use with PHP or Apache (e.g.php -S localhost:8080 or apache2ctl start)
