added docs folder, this will be used as documentation files from now on

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,6 @@
 .devcontainer/          export-ignore
 .github/		            export-ignore
-WIKI.md	            	  export-ignore
-MIGRATION_GUIDE.md		  export-ignore
+.vscode/             	  export-ignore
+.eslintrc.json     		  export-ignore
+*.db               		  export-ignore
+docs/             		  export-ignore
