Segregate xdebug installation && package.json cleanup

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "build": "yarn run build:js && yarn run build:css",
     "build:js": "webpack --progress --mode=production",
     "watch:js": "webpack --progress --watch --mode=development",
     "build:css": "node-sass --omit-source-map-url --importer node_modules/node-sass-import assets/_css/index.scss assets/css/index.css",
