--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -32,7 +32,7 @@ jobs:
     #   run: php ./vendor/bin/phpunit
     - name: Run Migration
       run: |
-        export PHINX_ENVIRONMENT=development
+        export PHINX_ENVIRONMENT=testing
         cp -f configs/database.php.test configs/database.php
         php ./vendor/bin/phinx migrate
     - name: Run PHP CodeSniffer
@@ -60,7 +60,7 @@ jobs:
       run: composer install --no-progress --no-suggest
     - name: Run Migration
       run: |
-        $Env:PHINX_ENVIRONMENT = "development"
+        $Env:PHINX_ENVIRONMENT = "testing"
         Remove-Item configs/database.php
         Copy-Item configs/database.php.test configs/database.php
         php ./vendor/bin/phinx migrate
