--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ develop, feature/*, bugfix/* ]
   pull_request:
-    branches: [ develop, feature/*, bugfix/* ]
+    branches: [ release/* ]
 
 jobs:
   unix-build:
