--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Debug
+name: Integration Testing
 
 on:
   push:
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         operating-system: ['ubuntu-latest', 'macos-latest']
-        php-versions: ['8.0']
+        php-versions: ['8.1']
         phpunit-versions: ['latest']
     steps:
     - name: Checkout
@@ -28,13 +28,14 @@ jobs:
     - name: Install dependencies
       if: steps.composer-cache.outputs.cache-hit != 'true'
       run: composer install --no-progress --no-suggest
-    # - name: PHPUnit
-    #   run: php ./vendor/bin/phpunit
     - name: Run Migration
       run: |
         export PHINX_ENVIRONMENT=testing
         cp -f configs/database.php.test configs/database.php
         php ./vendor/bin/phinx migrate
+        php ./vendor/bin/phinx seed:run
+    # - name: PHPUnit
+    #   run: php ./vendor/bin/phpunit
     - name: Run PHP CodeSniffer
       run: php ./vendor/bin/phpcs classes libraries error.php forgotpassword.php index.php multi_user.php register.php
   win-build:
