Integration cleanup - include master & prod

--- a/.github/workflows/code-check.yml
+++ b/.github/workflows/code-check.yml
@@ -2,7 +2,7 @@ name: Code Quality Checks
 
 on:
   push:
-    branches: [ master, hotfix/*, release/* ]
+    branches: [ master, develop, hotfix/*, feature/*, bugfix/* ]
   pull_request:
     branches: [ release/* ]
 
