--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Integration Testing
 
 on:
   push:
-    branches: [ develop, feature/*, bugfix/* ]
+    branches: [ master, develop, hotfix/*, feature/*, bugfix/* ]
   pull_request:
     branches: [ release/* ]
 
