Refactoring scripts for more manageable workflow

--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,9 @@
             "php -r \"file_exists('configs/system.php') || copy('configs/system.php.example', 'configs/system.php');\"",
             "php -r \"file_exists('configs/database.php') || copy('configs/database.php.example', 'configs/database.php');\"",
             "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ],
+        "lint": [
+            "./vendor/bin/phpcs classes libraries error.php forgotpassword.php index.php multiuser.php register.php"
         ]
     }
 }
